# python-utils-ak

./: .gitignore  .isort.cfg  README.md  pyproject.toml  requirements.txt  setup.py
src/python/libs/lessmore.clock/: pyproject.toml
src/python/libs/lessmore.clock/lessmore/clock/: __init__.py  clock.py
src/python/libs/lessmore.clock/tests/: test_clock.py
utils/async_tools/: async_tools.py
utils/aws/: __init__.py  aws_dumper.py  s3_client.py
utils/callback_timer/: callback_timer.py
utils/dict/: dotdict.py
utils/exceptions/: exception_trace.py
utils/functions/: map_and_uni.py
utils/git/: git.py  git_tools.py
utils/granular_storage/: __init__.py
utils/jobqueue/: example_advanced.py  example_simple.py  mjq.py  worker.py
utils/kafka/: __init__.py  kafka_client.py  kafka_processor.py  live_dumper.py  serial_dumper.py
utils/log/: configure.py  simple_custom_field_formatter.py
utils/message_queue/: __init__.py
utils/messenger/: telegramAlerts.py
utils/microservices/: base.py  listener.py  microservice.py
utils/networking/: __init__.py
utils/numeric/: numeric.py
utils/os/: os.py
utils/pandas/: pd_tools.py
utils/plot/: plotter.py
utils/proxy/: proxy.py
utils/reflexion/: code.py
utils/script_manager/: __init__.py  script_manager.py
utils/scripts/: fix_gits.py
utils/serialization/: __init__.py  js.py
utils/ssh/: ssh.py
utils/str/: __init__.py
utils_ak/: __init__.py  async.py  callback_timer.py  dotdict.py  functional_tools.py  git_tools.py  interactive_imports.py  limited_dict.py  mail.py  many_to_one.py  module.py  os_tools.py  pd_tools.py  re_tools.py  strtypes.py  system.py  tqdm_ak.py  tqtb.py
utils_ak/job_orchestrator/worker/test/: Dockerfile  __init__.py  build.bat  generate_bats.py  generate_bats_from_deployment_file.py  generate_run_bat.py  main.py  pyproject.toml  run.bat  sample_deployment.yml  test_worker.py
utils_ak/job_orchestrator/worker/test/inbox/: generate_bats_from_deployment_file.py
(+541 files in other folders)
