[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Arsenii Kadaner <arseniikadaner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
loguru = "^0.5.3"
fire = "^0.4.0"
mongoengine = "^0.22.1"
anyconfig = "^0.10.0"
PyYAML = "^5.4.1"
ujson = "^4.0.2"
sortedcollections = "^2.1.0"
pyzmq = "^22.0.3"
stackprinter = "^0.2.5"
msgpack = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
